Update Maven dependency versions and remove unused classes
The commit updates the version of the Maven dependency and removes
unused classes.